# analytics-engine

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  RepoReport.md  pyproject.toml  run_backend.py
.streamlit/: config.toml
api/: dependencies.py  main.py  middleware.py  session_store.py
api/models/: requests.py  responses.py
api/routers/: data_source.py  profiling.py  statistics.py  visualizations.py
app/: __init__.py  main.py
config/: settings.py
core/: __init__.py  filtering.py  geospatial.py  insights.py  profiling.py  statistics.py  visualizations.py
db/: __init__.py  connect_to_sql.py  connection.py  introspection.py  loader.py  query.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Header.tsx  MainContent.tsx  Sidebar.tsx
frontend/src/components/charts/: ChartContainer.tsx  PlotlyChart.tsx
frontend/src/components/filters/: FilterPanel.tsx
frontend/src/components/sidebar/: FileUpload.tsx  SampleData.tsx  SqlConnection.tsx
frontend/src/components/tabs/: GeospatialTab.tsx  InsightsTab.tsx  OverviewTab.tsx  RelationshipsTab.tsx  TrendsTab.tsx  tabConfig.ts
frontend/src/types/: api.ts  dataset.ts
models/: __init__.py
tests/: conftest.py  test_profiling.py  test_statistics.py
