[project]
name = "analytics-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)",
    "pandas (<3.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyodbc (>=5.1.0,<6.0.0)",
    "pyproj (>=3.7.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "analytics_engine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
